Fix search input width to prevent icon overflow

--- a/web/src/components/SearchBar.module.css
+++ b/web/src/components/SearchBar.module.css
@@ -44,7 +44,7 @@
 }
 
 .searchInput {
-    width: 100%;
+    width: auto;
     height: 24px;
     font-family: 'Museo Sans';
     font-style: normal;
